--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,89 @@
-asn1crypto==0.24.0
-certifi==2019.6.16
-cffi==1.12.3
+antimony==2.11.0
+appdirs==1.4.3
+atomicwrites==1.3.0
+attrs==19.1.0
+backcall==0.1.0
+certifi==2019.9.11
 chardet==3.0.4
-conda==4.7.10
-conda-package-handling==1.3.11
-cryptography==2.7
+Click==7.0
+colander==0.9.9
+colorama==0.4.1
+contextlib2==0.5.5
+cycler==0.10.0
+Cython==0.29.6
+dash==1.3.1
+dash-canvas==0.0.11
+dash-core-components==1.2.1
+dash-daq==0.1.0
+dash-html-components==1.0.1
+dash-renderer==1.1.0
+dash-table==4.3.0
+decorator==4.4.0
+Flask==1.1.1
+Flask-Compress==1.4.0
+future==0.17.1
 idna==2.8
-libarchive-c==2.8
-menuinst==1.4.16
-pycosat==0.6.3
-pycparser==2.19
-pyOpenSSL==19.0.0
-PySocks==1.7.0
-pywin32==223
+imageio==2.5.0
+importlib-metadata==0.23
+ipykernel==5.1.2
+ipython==7.8.0
+ipython-genutils==0.2.0
+iso8601==0.1.8
+itsdangerous==1.1.0
+jedi==0.15.1
+Jinja2==2.10.1
+joblib==0.13.2
+jupyter-client==5.3.2
+jupyter-core==4.5.0
+kiwisolver==1.1.0
+lark-parser==0.7.5
+libroadrunner==1.5.4
+MarkupSafe==1.1.1
+matplotlib==3.1.1
+more-itertools==7.2.0
+networkx==2.3
+nose==1.3.7
+numpy==1.17.2
+packaging==19.1
+pandas==0.25.1
+parso==0.5.1
+phrasedml==1.0.9
+pickleshare==0.7.5
+Pillow==6.0.0
+plotly==4.1.1
+pluggy==0.13.0
+prompt-toolkit==2.0.9
+py==1.8.0
+Pygments==2.4.2
+pyparsing==2.4.2
+pytest==5.1.2
+python-dateutil==2.8.0
+pytz==2019.2
+PyWavelets==1.0.3
+pywin32==225
+PyYAML==5.1.2
+pyzmq==18.1.0
+redis==2.8.0
 requests==2.22.0
-ruamel-yaml==0.15.46
+retrying==1.3.3
+rrplugins==1.2.2
+sbml2matlab==0.9.1
+scikit-image==0.15.0
+scikit-learn==0.21.3
+scipy==1.3.1
+seaborn==0.9.0
 six==1.12.0
-tqdm==4.32.1
-urllib3==1.24.2
-win-inet-pton==1.1.0
+tecombine==0.2.2.1
+tellurium==2.1.5
+tenuml==1.1.1
+tesbml==5.15.0.1
+tesedml==0.4.3
+tornado==6.0.3
+traitlets==4.3.2
+translationstring==1.3
+urllib3==1.25.3
+wcwidth==0.1.7
+Werkzeug==0.15.6
 wincertstore==0.2
+xlrd==1.2.0
+zipp==0.6.0
