--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: python
 env:
-  - CODECOV_TOKEN="ff53ff89-7523-4946-97ee-347660e16ac9"
-before_install:
-  - wget https://github.com/copasi/COPASI/releases/download/Build-207/COPASI-4.25.207-Linux-64bit.tar.gz -O /tmp/copasi.tar.gz
-  - tar -xzvf /tmp/copasi.tar.gz
-  - export PATH=$PATH:$PWD/COPASI-4.25.207-Linux-64bit/bin/
+  - CODECOV_TOKEN=""
 python:
   - "3.6"
 install:
